<resources>
    <string name="app_name">Health-IO</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign-Up</string>
    <string name="ic_main_login">Health.io</string>
    <string name="welcome">health.io</string>
    <string name="welcome_message">Welcome to health.io</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="last_name">Last Name</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="age">Age</string>
    <string name="live_your_choice">Live Your Choices</string>
    <string name="tap_sign_up_to_continue">Tap Sign-Up to Continue</string>
    <string name="networkError">Seems a Network Error, Try Again Later</string>
    <string name="signedUpSucces">Successfully Signed-Up</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="remember_device">Remember Device</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="success">Success</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_verification_email">Send Verification Email</string>
    <string name="network_error">Falied to Send OTP, Check your Network</string>
    <string name="failed_fetch_from_server">Failed to fetch Response from Server</string>
    <string name="enter_otp_sent_to_your_email_id">Enter OTP sent to your Email-ID</string>
    <string name="verify_otp">Verify</string>
    <string name="verify_otp_tag">Verify OTP</string>
    <string name="otp_verified">OTP Verified Successfully</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_your_password">Re-Enter Your Password</string>
    <string name="change_pwd">Change Password</string>
    <string name="enter_a_location">Enter a Location</string>
    <string name="search_location">Search Location</string>
    <string name="hospitals">Hospitals</string>
    <string name="discover">Discover</string>
    <string name="clinics">Clinics</string>
    <string name="laboratory">Laboratory</string>
    <string name="medicine_shop">Medicine Outlet</string>
    <string name="ambulance">Ambulance</string>
    <string name="police">Police</string>
    <string name="sort_by">Sort By Name</string>
    <string name="select_location">Select District</string>
    <string name="eta">ETA</string>
    <string name="network_error_2">Cannot Connect to Server</string>
    <string name="description">Description</string>
    <string name="hospital_description">This is a sample Description of a Hospital, That will be entered by the hospital and shown to user on his/her android device</string>
    <string name="icu">ICU</string>
    <string name="ccu">CCU</string>
    <string name="ventilators">Ventilators</string>
    <string name="oxygen">Oxygen</string>
    <string name="x_ray">X-Ray</string>
    <string name="mri">MRI</string>
    <string name="ecg">ECG</string>
    <string name="availabilities">Availabilities</string>
    <string name="facilities">Facilities</string>
    <string name="ultra_sound">Ultra Sound</string>
    <string name="bed">Bed</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="emergency_cases_reported">Emergency Cases Reported</string>
    <string name="timings">Timing</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="navigate">Navigate</string>
    <string name="last_updated">Last Updated :</string>
    <string name="hrs_24">24 hours</string>

    <string-array name="sort_methods">
        <item>Sort by Name </item>
        <item>Sort By Distance</item>
        <item>Sort By Type</item>
        <item>Sort By Availability</item>
        <item>Sort By Fees</item>
    </string-array>
    <string name="title_activity_sign_up_otp">SignUpOTP</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="an_otp_has_been_sent_to_your_email">An OTP has been sent to your Email :</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend">Resend</string>
    <string name="network_error_3">Seems like a Network Error</string>
    <string name="select_district">Select your District</string>
    <string name="select_your_district">Select Your District</string>
    <string name="error_occurred">Error Occurred</string>
    <string name="try_again">Try Again</string>
    <string name="retry_message">It seems an error occurred while trying to connect to internet, Please check your internet and retry again.</string>
    <string name="seems_network_error">Seems like a Network error, Please try after some time</string>
    <string name="dash">--</string>
    <string name="book">Book Bed</string>
    <string name="select_what_you_want_to_book">Select what you want to book</string>
    <string name="name_of_patient">Name of Patient</string>
    <string name="age_patient">Age of Patient</string>
    <string name="phone_number_working">Phone Number (Working)</string>
    <string name="book_a_bed">Book a Bed</string>
    <string name="bo_ok">Book</string>
    <string name="my_bookings">My Bookings</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="book_beds_from_health_io">Book Beds from Health-IO and Report within 24hr for Hassle free Service</string>

</resources>