<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_action_search"
        android:orderInCategory="1"
        android:icon="@drawable/ic_baseline_search_24"
        app:iconTint="#008aff"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        android:title="@string/search"/>
</menu>