<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Models.ErrorScreen">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@drawable/gradient_button"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/error_occurred"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"/>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:actionBarSize"
        >
        <ImageView
            android:id="@+id/error_image"
            android:layout_margin="50dp"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:src="@drawable/embarrassed"/>
        <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retry_message"
            android:layout_below="@id/error_image"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textSize="18sp"
            />

    </RelativeLayout>
    <android.widget.Button
        android:id="@+id/try_again"
        android:layout_width="match_parent"
        android:layout_margin="40dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:background="@drawable/gradient_button_round"
        android:text="@string/try_again"
        android:textColor="@color/white"
        app:backgroundTint="@color/primary"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>