<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="20dp"
    app:cardCornerRadius="15dp"
    android:background="@drawable/rounded_corners"
    >
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <TextView
           android:id="@+id/title_holder"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:fontFamily="@font/cabin_bold"
           android:paddingTop="10dp"
           android:text="@string/select_your_district"
           android:textAlignment="center"
           android:textSize="20sp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <androidx.cardview.widget.CardView
           android:id="@+id/search_box_district"
           android:layout_width="match_parent"
           android:layout_height="60dp"
           android:layout_marginTop="12.6dp"
           app:cardCornerRadius="30sp"
           android:background="@drawable/rounded_corners_white"
           style="@style/CardView.Light"
           app:cardElevation="10dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/title_holder"
           app:layout_constraintBottom_toTopOf="@id/scrollView2"
           android:layout_marginStart="20dp"
           android:layout_marginEnd="20dp">

           <com.google.android.material.textfield.TextInputEditText

               android:id="@+id/search_district"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@drawable/rounded_corners_white"
               android:hint="@string/search"
               android:paddingStart="25dp"
               android:paddingEnd="0dp"
               android:inputType="text"
               />
       </androidx.cardview.widget.CardView>

       <ScrollView
           android:minWidth="400dp"
           android:layout_marginTop="13dp"
           android:id="@+id/scrollView2"
           android:layout_width="match_parent"
           android:layout_height="240dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/search_box_district">

           <androidx.recyclerview.widget.RecyclerView
               android:minWidth="400dp"
               android:id="@+id/recycler_district"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:padding="15dp">

           </androidx.recyclerview.widget.RecyclerView>
       </ScrollView>

       <Button
           android:layout_marginTop="10dp"
           android:id="@+id/district_cancel"
           android:layout_width="120dp"
           android:layout_height="60dp"
           android:text="@string/cancel"
           android:layout_marginBottom="20dp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.498"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/scrollView2"
           app:layout_constraintVertical_bias="0.737" />

   </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>